# saxibot

./: .gitignore  CMakeLists.txt  logbook.md  package.xml
config/: drive_bot.rviz  generic_parameters.yaml  joystick.yaml  joystick_BACKUP_6513.yaml  joystick_REMOTE_6513.yaml  my_controllers.yaml  saxibot.rviz  view_bot_1.rviz
description/: camera.xacro  gazebo_control.xacro  gz_control.xacro  lidar.xacro  robot.urdf.xacro  robot_core.xacro  ros2_control.xacro
launch/: camera.launch.py  foxglove.launch.py  joystick.launch.py  launch_sim.launch.py  robot.launch.py  rsp.launch.py  sim.launch.py
models/: placeholder.sdf
worlds/: empty_world.sdf  my_first_world.world  my_first_world_2.world  obstacles.world  world_demo.sdf  world_demo_dl.sdf
