<?xml version="1.0"?>
<?xml-model href="http://download.ros.org/schema/package_format3.xsd" schematypens="http://www.w3.org/2001/XMLSchema"?>
<package format="3">
  <name>saxibot</name>
  <version>0.0.0</version>
  <license>TODO: License declaration</license>

  <description>
    Saxibot - based on articulate robots by Josh Newans
  </description>
  <url type="repository">https://github.com/joriskampman/saxibot</url>
  <author email="joriskampman@gmail.com">Joris Kampman</author>
  <maintainer email="joriskampman@gmail.com">Joris Kampman</maintainer>

  <buildtool_depend>ament_cmake</buildtool_depend>

  <test_depend>ament_lint_auto</test_depend>
  <test_depend>ament_lint_common</test_depend>

  <exec_depend>ros2launch</exec_depend>

  <depend>ros_gz_bridge</depend>
  <depend>ros_gz_sim</depend>
  <depend>ros_gz_image</depend>
  <depend>sensor_msgs</depend>
  <depend>tf2</depend>

  <export>
    <build_type>ament_cmake</build_type>

    <!-- exporting gazebo model path -->
    <!-- note that ${prefix} is the path of package.xml -->
    <gazebo_ros gazebo_model_path="${prefix}/models"/>
    <gazebo_ros gazebo_media_path="${prefix}/media"/>
    <gazebo_ros plugin_path="${prefix}/plugins"/>
  </export>

</package>
